--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/AS_netolog_mq24.css">
-    <link rel="stylesheet" href="/MQ-24_diplom_ASmirnov/css/AS_netolog_mq24.css">
+    <!--<link rel="stylesheet" href="/MQ-24_diplom_ASmirnov/css/AS_netolog_mq24.css">	-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AndreySmirnov-mq24 Диплом Адаптивная и мобильная верстка </title>
 
